Revert "Fixed size of wall items on mobile". It's boring.
This reverts commit 6cfb4cbd106a9c6f2e9beff75d20ffa95987899f.

--- a/app/assets/stylesheets/post.css.scss
+++ b/app/assets/stylesheets/post.css.scss
@@ -177,7 +177,7 @@
     @include paper;
     
     
-    width: 250px;
+    width: 100%;
     padding: 0;
 
     @media(min-width: $extra-small-device) {
